force-app/main/default/objects/Application_Bypass__c/Application_Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to bypass validation rules, etc. in applications or integrations</description>
    <label>Application Bypass</label>
</CustomObject>