force-app/main/default/objects/Application_Bypass__c/fields/Allow_Account_Address_Edit__c.field-meta.xml
<CustomField>
    <fullName>Allow_Account_Address_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true it will give permission to edit the Account Billing Address LWC for selected profiles/users.</description>
    <label>Allow Account Address Edit</label>
    <type>Checkbox</type>
</CustomField>