force-app/main/default/objects/Application_Bypass__c/fields/Booth_Replace_Permission__c.field-meta.xml
<CustomField>
    <fullName>Booth_Replace_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Booth Replace Permission after Closed Won/Booked Opportuinity.</inlineHelpText>
    <label>Booth Replace Permission</label>
    <type>Checkbox</type>
</CustomField>