force-app/main/default/objects/Application_Bypass__c/fields/Bypass_Edition_Required_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Edition_Required_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Edition Required Validation</label>
    <type>Checkbox</type>
</CustomField>