force-app/main/default/objects/Application_Bypass__c/fields/Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Using $Setup.Application_Bypass__c.Bypass_Validation_Rules__c will ignore/bypass validation rules</inlineHelpText>
    <label>Bypass_Validation Rules</label>
    <type>Checkbox</type>
</CustomField>