force-app/main/default/objects/Application_Bypass__c/fields/Country_should_be_required_On_converting__c.field-meta.xml
<CustomField>
    <fullName>Country_should_be_required_On_converting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile-based is converting a Lead, then Country should be required.</description>
    <label>Country should be required On converting</label>
    <type>Checkbox</type>
</CustomField>