force-app/main/default/objects/Application_Bypass__c/fields/Docusign_Counter_Sign__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Counter_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this to enable counter sign in docusign.</description>
    <label>Docusign Counter Sign</label>
    <type>Checkbox</type>
</CustomField>