force-app/main/default/objects/Application_Bypass__c/fields/Pavilion_Booth_Process__c.field-meta.xml
<CustomField>
    <fullName>Pavilion_Booth_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checked then Profile user can process for pavilion Booth while the opportunity is closed.</inlineHelpText>
    <label>Pavilion Booth Process</label>
    <type>Checkbox</type>
</CustomField>