force-app/main/default/objects/Application_Bypass__c/fields/Tax_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box is used to by pass invalid Tax validation rule on invoice object.</description>
    <inlineHelpText>This check box is used to by pass invalid Tax validation rule on invoice object.</inlineHelpText>
    <label>Tax Invoice</label>
    <type>Checkbox</type>
</CustomField>